CAMEL-10922 replace jaxb2-maven-plugin with cxf-xjc-plugin on Java 9